--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,8 @@
   text-align: center;
   white-space: pre-line;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App > * {
+  margin-bottom: 50px;
 }
 
 .App-header {
@@ -25,38 +17,48 @@
   color: white;
 }
 
-.App-confirmation{
-  /*display: none;*/
-}
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
 body {
-  font: 14px "Century Gothic", Futura, sans-serif;
+  font-family: "Source Code Pro",monospace;
   margin: 20px;
 }
 
-ol, ul {
-  padding-left: 30px;
+.topBar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.claim *, .wallet *{
+  margin: 3px;
+}
+
+.wallet {
+  display: flex;
+}
+
+.gameContainer {
+  display: flex;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+
+.gameAndButton{
+  margin-right: 75px;
+  text-align: center;
+}
+
+.App-confirmation {
+  width: 200px;
+}
+
+.game {
+  width: 100px;
 }
 
 .board-row:after {
   clear: both;
   content: "";
   display: table;
-}
-
-.status {
-  margin-bottom: 10px;
 }
 
 .square {
@@ -78,15 +80,7 @@ ol, ul {
   outline: none;
 }
 
-.kbd-navigation .square:focus {
-  background: #ddd;
-}
-
 .game {
   display: flex;
   flex-direction: row;
-}
-
-.game-info {
-  margin-left: 20px;
 }
