--- a/src/App.css
+++ b/src/App.css
@@ -62,10 +62,6 @@ body {
   font-weight: bold;
 }
 
-.game {
-  width: 100px;
-}
-
 .board-row:after {
   clear: both;
   content: "";
@@ -73,7 +69,7 @@ body {
 }
 
 .square {
-  /*background: gray;*/
+  background: white;
   border: 1px solid #999;
   float: left;
   font-size: 24px;
@@ -92,6 +88,18 @@ body {
 }
 
 .game {
+  width: 100px;
   display: flex;
   flex-direction: row;
+}
+
+.app-pattern {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+}
+
+.activePatterns {
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
